# fccgsupertagger

./: .gitignore  README.md  camembert_model.py  dataHandle.py  input.txt  main.py  model.py  pyproject.toml  train.py  train_camembert.py  utils.py
